--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 header {
-  background-color: #f5ba13;
+  background-color: #3d005b;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -108,7 +108,7 @@ form button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #f5ba13;
+  background: #3d005b;
   color: #fff;
   border: none;
   border-radius: 50%;
@@ -149,7 +149,7 @@ form button {
   position: relative;
   float: right;
   margin-right: 10px;
-  color: #f5ba13;
+  color: #3d005b;
   border: none;
   width: 36px;
   height: 36px;
