--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -21,7 +21,9 @@ body {
 }
 
 header {
-  background-color: #3d005b;
+  /* background-color: #3d005b; */
+  background-color: #002366;
+
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -108,7 +110,8 @@ form button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #3d005b;
+  /* background: #3d005b; */
+  background: #002366;
   color: #fff;
   border: none;
   border-radius: 50%;
@@ -149,10 +152,20 @@ form button {
   position: relative;
   float: right;
   margin-right: 10px;
-  color: #3d005b;
+  /* color: #3d005b; */
+  color: #002366;
   border: none;
   width: 36px;
   height: 36px;
   cursor: pointer;
   outline: none;
+}
+
+.application button.expanded-button {
+  width: 100%;
+  /* display: block; */
+  background-color: transparent;
+  text-align: right;
+  height: 20px;
+  line-height: 20px;
 }
